SERVER-37880 Make time_support's Backoff class non-blocking